# swft

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  sample.env
static/: security.txt
templates/: about.html  admin.html  index.html  shared.html
